Fixed margin issue on mobile display

--- a/web/themes/custom/miramar/css/style.css
+++ b/web/themes/custom/miramar/css/style.css
@@ -1487,12 +1487,14 @@ footer h4,footer p.img {
 	max-height: 650px;
 }
 .step-panel{
-	margin-left: 6px;
-	margin-top:0;padding:top:0;
+	margin-top:0;
+	padding:top:0;
 	width:100%;
 }
-.step-panel-mobile{
-	margin-top:0;padding:top:0;
+.step-panel-mobile {
+/*	margin-left: 6px;*/
+	margin-top:0;
+	padding:top:0;
 	width:100%;
 }
 .step-panel ul.resource{
@@ -1515,7 +1517,7 @@ footer h4,footer p.img {
 	color: #fff;
 	font-size: 1.5909090909090908em;
 	font-family: 'Oswald', sans-serif;
-  text-transform: uppercase;
+  	text-transform: uppercase;
 	margin:0;
 }
 
@@ -2323,7 +2325,7 @@ background: #a22130;
 .getstarted .news-title h3 {
 	margin-top:1em!important;
 }
-.getstarted-mobile {width:100%;padding-left:0.75em}
+.getstarted-mobile {width:100%;margin-left:0.25em}
 
 td.resources-students {
 	background: #daf2f4;
